<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/navyBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    android:orientation="vertical"
    android:padding="23dp"
    tools:context="Project1.CourseHistory">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="8dp"
            android:src="@drawable/course" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="21dp"
                android:ems="10"
                android:hint="@string/Name"
                android:inputType="text"
                android:paddingTop="21dp"
                android:textColor="@color/white"
                android:textColorHint="@color/yellow"
                android:textSize="19sp" />

            <EditText
            android:id="@+id/etCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_margin="8dp"
            android:textSize="19sp"
            android:paddingTop="21dp"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:textColorHint="@color/yellow"
            android:textColor="@color/white"
            android:minLines="1"
            android:maxLines="9"
            android:ems="10"
            android:hint= "@string/Course" />

        <EditText
            android:id="@+id/etNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:paddingTop="21dp"
            android:textSize="19sp"
            android:ems="10"
            android:layout_margin="8dp"
            android:inputType="number"
            android:textColorHint="@color/yellow"
            android:textColor="@color/white"
            android:hint= "@string/No" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="21dp"
        android:textSize="19sp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="text"
        android:paddingTop="21dp"
        android:textColor="@color/white"
        android:textColorHint="@color/yellow" />

    <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_margin="21dp"
            android:layout_marginTop="51dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:backgroundTint="@color/yellow"
            android:textSize="22sp"
            android:paddingTop="11dp"
            android:text="Purchase Now" />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>